2022-09-02 07:38  benno

	* usr.sbin/httpd/: httpd.c, httpd.conf.5: Make newer mime type
	  definitions take precedence over existing ones.

	  Patch from Ben Fuller <ben -AT- bvnf -DOT- space>, helped along
	  by florian@ ok florian@ and some mumblings from claudio who does
	  not want okays in httpd.

2022-09-01 20:36  tb

	* usr.sbin/httpd/server_http.c: ugly whitespace

2022-08-28 11:11  jsg

	* lib/libc/crypt/blowfish.c: remove unused blowfish inline defines
	  inline use was removed in 1998

2022-08-15 12:29  claudio

	* usr.sbin/httpd/: httpd.h, server_fcgi.c: Neither clt_descreq nor
	  clt_descresp in struct client need to be void *.  They both are
	  only used as struct http_descriptor.	OK tb@

2022-08-15 10:29  claudio

	* usr.sbin/httpd/server_fcgi.c: For FCGI_END_REQUEST reset the clt
	  struct similar to what is done in the file and other cases.
	  Especially when the session uses keep-alive it is important to
	  set TOREAD_HTTP_HEADER so that the state machine knows what's
	  next.  OK op@

2022-08-15 09:40  op

	* usr.sbin/httpd/server_file.c: plug some memory leaks in
	  server_file_index when failures occur

	  namelist and its entries are not freed if escape_html fails or if
	  we fail in the inner loop.  Move scandir later so it's closer to
	  the for loop and handle escape_html and url_encode failures.

	  With lots of help from tb, thanks!

	  ok tb@

2022-08-15 09:36  op

	* usr.sbin/httpd/server_http.c: plug a fd leak in read_errdoc if
	  fstat fails or if the file is empty

	  tweak/ok tb@

2022-08-12 08:40  claudio

	* usr.sbin/httpd/server_fcgi.c: Use break instead of return so that
	  a HEAD request still consumes all data.  OK op@

2022-08-12 06:41  op

	* usr.sbin/httpd/server_fcgi.c: fix regression introduced in
	  previous commit.  HEAD replies don't have a body so
	  server_fcgi_error shouldn't print the end marker.

	  OK claudio@

2022-08-11 14:25  op

	* usr.sbin/httpd/server_fcgi.c: correctly handle an abnormal